Add basic test to verify MLServiceResource